trunk/Archive2/e8/a09fabf7e9a3ca/output
main.cpp: In function ‘int main()’:
main.cpp:5:19: error: invalid conversion from ‘int’ to ‘int*’ [-fpermissive]
     int * q = int{};
                   ^
